# proplead

./: Dockerfile  Procfile  README.md  fastapi uvicorn[standard] crewai langchain-openai openai python-dotenv  main.py  pyproject.toml  requirements.txt  setup.py  vercel.json
api/: paddle-webhook.ts  trigger-crew.ts  zip-check.ts
railway/: server.py
src/propleads_pro/: __init__.py  crew.py  main.py
src/propleads_pro/config/: agents.yaml  tasks.yaml
src/propleads_pro/tools/: __init__.py  attom_tool.py  delivery_tool.py  supabase_tool.py
supabase/: schema.sql
